@@ -19,6 +19,7 @@ Changes:
 - Remount all after netif is up for iSCSI device.
 - Clear notify after execute now of rsync client/local.
 - Increase the number of config backup to 6.
+- Confirm permission on temporary directory.
 - Upgrade to FreeBSD 9.1-RC1.
 - Upgrade istgt to 20120901.
 - Upgrade isboot to 0.2.6.
